--- a/books.csproj
+++ b/books.csproj
@@ -68,6 +68,7 @@
             <DependentUpon>App.xaml</DependentUpon>
             <SubType>Code</SubType>
         </Compile>
+        <Compile Include="ViewModel\BaseViewModel.cs" />
         <Compile Include="ViewModel\BooksViewModel.cs" />
         <Compile Include="ViewModel\BookViewModel.cs" />
         <Compile Include="View\Books.xaml.cs">
